[package]
name = "axum-transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.12", features = ["headers"] }
chrono = { version = "0.4.19", features = ["serde"] }
enum-utils = "0.1.2"
figment = {version = "0.10.6", features=["env", "toml"] }
getset = "0.1.2"
hyper = "0.14.20"
jsonwebtoken = "8.1.1"
serde = { version = "1.0.139", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
