[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error={path="../error"}
serde = "1.0.140"
jsonwebtoken = "8.1.1"
axum = { version = "0.5.12"}
tower-http = { version = "0.3.4", features = ["auth"] }
thiserror = "1.0.31"
futures-util = "0.3.21"
