[package]
name = "axum-transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
controller= { path= "../controller" }
services = {path="../services"}
auth= {path="../auth"}

thiserror = "1.0.31"
axum = { version = "0.5.12", features = ["headers"] }
serde = { version = "1.0.139", features = ["derive"] }
figment = {version = "0.10.6", features=["env", "toml"] }
tower-http = { version = "0.3.4", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
hyper = "0.14.20"


jsonwebtoken = "8.1.1"
eyre = "0.6.8"
