[package]
name = "error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.12" }
thiserror = "1.0.31"
jsonwebtoken = "8.1.1"
serde = { version = "1.0.139", features = ["derive"] }
