[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
models = {path="../models"}
chrono = { version = "0.4.19" }
error={path="../error"}
jsonwebtoken = "8.1.1"

[dev-dependencies]
mockall = "0.11.1"
rstest = "0.15.0"
speculoos = "0.9.0"
tokio = { version = "1.20.0", features = ["full"] }

